[gd_scene load_steps=17 format=2]

[ext_resource path="res://Sprites/Overworld/NPCs/ra_npc.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/textBox.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/ra_portrait.png" type="Texture" id=3]
[ext_resource path="res://Sprites/UI/Fonts/MiniPixel7-6LKv.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://NPC.gd" type="Script" id=5]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 8 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "Down",
"speed": 5.0
}, {
"frames": [ SubResource( 13 ) ],
"loop": true,
"name": "Left",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ) ],
"loop": true,
"name": "Right",
"speed": 5.0
}, {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "Up",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 26, 26 )

[sub_resource type="DynamicFont" id=8]
size = 19
use_mipmaps = true
extra_spacing_top = -3
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 17
use_mipmaps = true
extra_spacing_bottom = -6
extra_spacing_space = -2
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/AspectRatioContainer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 100 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "ShowTextBox"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("UI/AspectRatioContainer/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 110 ), Vector2( 0, 0 ) ]
}

[node name="NPC" type="Node2D"]
script = ExtResource( 5 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 0, 6 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 6 )
animation = "Down"

[node name="InteractionZone" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionZone"]
shape = SubResource( 7 )

[node name="UI" type="CanvasLayer" parent="."]
offset = Vector2( 0, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 1 )

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="UI"]
anchor_left = 0.5
anchor_top = 0.95
anchor_right = 0.5
anchor_bottom = 0.95
margin_left = -20.0
margin_top = -40.0
margin_right = 20.0

[node name="Sprite" type="Sprite" parent="UI/AspectRatioContainer"]
position = Vector2( 0, 100 )
texture = ExtResource( 2 )

[node name="Portrait" type="Sprite" parent="UI/AspectRatioContainer/Sprite"]
position = Vector2( -119, 8.5 )
texture = ExtResource( 3 )

[node name="NameLabel" type="Label" parent="UI/AspectRatioContainer/Sprite/Portrait"]
margin_left = -23.0
margin_top = 21.0
margin_right = 28.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
custom_fonts/font = SubResource( 8 )
text = "RA"
align = 1

[node name="TextLabel" type="Label" parent="UI/AspectRatioContainer/Sprite"]
margin_left = -66.0
margin_top = -27.5
margin_right = 145.0
margin_bottom = 32.5
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 9 )
text = "Hasten ye, quicken your feet: the water is  coming, and will soon reach the baskets. The sun is hot, may the sun be given fish in payment for the corn. Does not the pole stay all day on my shoulder very firmly? That is my wish. Thresh for yourselves, thresh for yourselves, oxen: thresh for yourselves, thresh for  yourselves: straw to eat, corn for your  masters: let not your hearts be still: it is cool."
autowrap = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 11 )
anims/ShowTextBox = SubResource( 10 )

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[connection signal="body_entered" from="InteractionZone" to="." method="_on_InteractionZone_body_entered"]
[connection signal="body_exited" from="InteractionZone" to="." method="_on_InteractionZone_body_exited"]
[connection signal="timeout" from="TurnTimer" to="." method="_on_TurnTimer_timeout"]
